--- a/_layout/home.html
+++ b/_layout/home.html
@@ -1,11 +1,7 @@
 ---
-layout: archive
+layout: home
 ---
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Info" }}</h3>
+One Game is a decentralized virtual world that grants gamers the ability to create their own reality and incentive based token ecosystem where tokens are awarded to the top performing creators and players.
 
-{% for post in paginator.posts %}
-  {% include archive-single.html %}
-{% endfor %}
-
-{% include paginator.html %}
+ One Game Source Code is maintained by the One Game Foundation.
